--- a/Podziekowania.html
+++ b/Podziekowania.html
@@ -41,67 +41,67 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/zdj-jarek/certyfikat Rzeczpospolita-1.jpg" class="d-block w-100" alt="fds">
+                <img src="your-img" class="d-block w-100" alt="certi">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/certyfikat Taxnet (2)-1.jpg" class="d-block w-100" alt="fdsf">
+                <img src="your-img" class="d-block w-100" alt="fdsf">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/certyfikat Taxnet-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/certyfikat TNN (3)-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/certyfikat TNN-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/Instytut Analiz Szczecin 2014-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/Instytut Analiz Szczecin 2018-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/ISC 2014-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/Kaizen Institute 2010 (2)-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/list gratulacyjny Kozłowski-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/Macrologic 2013 (2)-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/Macrologic 2013-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/Podziękowanie 2007,2010-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/podziękowanie Dyrektor PUP-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/Podziękowanie Pojedynek Szkół 2014-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/TNN 2018-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/TNN 2019-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/TNN 2019-2.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/zaświadczenie Instytut Analiz Szczecin (2)-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/zaświadczenie Instytut Analiz Szczecin-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
               <div class="carousel-item">
-                <img src="/zdj-jarek/zaświadczenie Kaizen-1.jpg" class="d-block w-100" alt="dfsfs">
+                <img src="your-img" class="d-block w-100" alt="dfsfs">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"  data-bs-slide="prev">
